# elasticsearch_examples

Machine Learning/Query Optimization/: pyproject.toml  requirements.txt  setup_yak_shaving_notes.txt
Machine Learning/Query Optimization/qopt/: trec.py
