[tool.poetry]
name = "query optimization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.2"
pip = "^22.3.1"
wheel = "^0.38.4"
tqdm = "^4.64.1"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
scikit-optimize = "^0.9.0"
elasticsearch = "7.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
